--- a/docker/data/history
+++ b/docker/data/history
@@ -81,3 +81,15 @@ sf do:mi:diff
 sf do:mi:mi
 sf make:repository
 composer require symfony/maker-bundle
+sf do:da:drop --force
+sf do:da:cr
+sf do:mi:diff
+sf do:mi:mi
+sf do:sc:va
+sf do:da:drop --force
+sf do:da:cr
+sf do:mi:diff
+sf do:mi:mi
+sf do:sc:va
+sf do:mi:mi
+sf do:sc:va
